[package]
name = "monoio-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
monoio = { version = "0.0" }
tracing = { version = "0.1" }
tracing-futures = { version = "0.2.5", default-features = false, features = ["std-future", "std", "futures-03"] }
futures = { version = "0.3" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "default", "json"] }
opentelemetry = "0.18"
tracing-opentelemetry = "0.18"